delete not used funcs
