# internal/transport/jsonRPC/custom-handlers/regression.go
@@ -162,164 +162,3 @@ func MlrRegressionExcel(ctx *fiber.Ctx, svc regression.Regression, file []byte) 
 	sendResponse(ctx, log.Logger, formula, nil)
 	return err
 }
-
-func RidgeRegression(ctx *fiber.Ctx, svc regression.Regression, XData [][]float64, YData [][]float64, alpha float64, tol float64, normalize bool) error {
-	var (
-		methodName = "RidgeRegression"
-		err        error
-	)
-
-	metrics := config.Metrics()
-	defer func(begin time.Time) {
-		fields := map[string]interface{}{
-			"method":      "get",
-			"path":        "/ridge",
-			"handlerName": methodName,
-			"xdata":       XData,
-			"ydata":       YData,
-			"alpha":       alpha,
-			"tol":         tol,
-			"norma;ize":   normalize,
-			"service":     serviceName,
-			"took":        time.Since(begin).String(),
-		}
-		l := log.Info()
-		if err != nil {
-			if errors.Is(err, errors.ForbiddenError()) {
-				l = log.Warn().Err(err)
-			} else {
-				l = log.Error().Err(err)
-			}
-		}
-		l.Fields(fields).Msg("call")
-
-		metrics.RequestLatency.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Observe(time.Since(begin).Seconds())
-	}(time.Now())
-
-	defer func() {
-		metrics.HttpCollector.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Add(1)
-	}()
-
-	res, err := svc.RidgeRegression(ctx.Context(), XData, YData, alpha, tol, normalize)
-	if err != nil {
-		sendResponse(ctx, log.Logger, nil, err)
-		return nil
-	}
-
-	sendResponse(ctx, log.Logger, res, nil)
-	return err
-}
-
-func LassoRegression(ctx *fiber.Ctx, svc regression.Regression, XData [][]float64, YData [][]float64, alpha float64, tol float64, normalize bool) error {
-	var (
-		methodName = "LassoRegression"
-		err        error
-	)
-
-	metrics := config.Metrics()
-	defer func(begin time.Time) {
-		fields := map[string]interface{}{
-			"method":      "get",
-			"path":        "/lasso",
-			"handlerName": methodName,
-			"xdata":       XData,
-			"ydata":       YData,
-			"alpha":       alpha,
-			"tol":         tol,
-			"norma;ize":   normalize,
-			"service":     serviceName,
-			"took":        time.Since(begin).String(),
-		}
-		l := log.Info()
-		if err != nil {
-			if errors.Is(err, errors.ForbiddenError()) {
-				l = log.Warn().Err(err)
-			} else {
-				l = log.Error().Err(err)
-			}
-		}
-		l.Fields(fields).Msg("call")
-
-		metrics.RequestLatency.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Observe(time.Since(begin).Seconds())
-	}(time.Now())
-
-	defer func() {
-		metrics.HttpCollector.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Add(1)
-	}()
-
-	res, err := svc.LassoRegression(ctx.Context(), XData, YData, alpha, tol, normalize)
-	if err != nil {
-		sendResponse(ctx, log.Logger, nil, err)
-		return nil
-	}
-
-	sendResponse(ctx, log.Logger, res, nil)
-	return err
-}
-
-func ElasticNetRegression(ctx *fiber.Ctx, svc regression.Regression, params models.ElasticNetParams) error {
-	var (
-		methodName = "ElasticNetRegression"
-		err        error
-	)
-
-	metrics := config.Metrics()
-	defer func(begin time.Time) {
-		fields := map[string]interface{}{
-			"method":      "get",
-			"path":        "/lasso",
-			"handlerName": methodName,
-			"params":      params,
-			"service":     serviceName,
-			"took":        time.Since(begin).String(),
-		}
-		l := log.Info()
-		if err != nil {
-			if errors.Is(err, errors.ForbiddenError()) {
-				l = log.Warn().Err(err)
-			} else {
-				l = log.Error().Err(err)
-			}
-		}
-		l.Fields(fields).Msg("call")
-
-		metrics.RequestLatency.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Observe(time.Since(begin).Seconds())
-	}(time.Now())
-
-	defer func() {
-		metrics.HttpCollector.WithLabelValues(
-			serviceName,
-			methodName,
-			fmt.Sprint(err == nil),
-		).Add(1)
-	}()
-
-	res, err := svc.ElasticNetRegression(ctx.Context(), params)
-	if err != nil {
-		sendResponse(ctx, log.Logger, nil, err)
-		return nil
-	}
-
-	sendResponse(ctx, log.Logger, res, nil)
-	return err
-}
