# swaggers/regression/swagger.yaml
@@ -5,50 +5,6 @@ info:
 servers:
     - {}
 paths:
-    /api/v1/elasticNet:
-        post:
-            tags:
-                - Regression
-            summary: Ручка по рассчету Elastic Net регрессии
-            description: Ручка возвращает формулу и параметры
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/requestRegressionElasticNetRegression'
-            responses:
-                "200":
-                    description: Successful operation
-                "400":
-                    description: Bad Request
-                "403":
-                    description: Forbidden
-                "405":
-                    description: Method Not Allowed
-                "500":
-                    description: Internal Server Error
-    /api/v1/lasso:
-        post:
-            tags:
-                - Regression
-            summary: Ручка по рассчету lasso регрессии
-            description: Ручка возвращает формулу и параметры
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/requestRegressionLassoRegression'
-            responses:
-                "200":
-                    description: Successful operation
-                "400":
-                    description: Bad Request
-                "403":
-                    description: Forbidden
-                "405":
-                    description: Method Not Allowed
-                "500":
-                    description: Internal Server Error
     /api/v1/mlr:
         post:
             tags:
@@ -115,28 +71,6 @@ paths:
                     description: Method Not Allowed
                 "500":
                     description: Internal Server Error
-    /api/v1/ridge:
-        post:
-            tags:
-                - Regression
-            summary: Ручка по рассчету ridge регрессии
-            description: Ручка возвращает формулу и параметры
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/requestRegressionRidgeRegression'
-            responses:
-                "200":
-                    description: Successful operation
-                "400":
-                    description: Bad Request
-                "403":
-                    description: Forbidden
-                "405":
-                    description: Method Not Allowed
-                "500":
-                    description: Internal Server Error
 components:
     schemas:
         models.DataPoint:
@@ -157,68 +91,6 @@ components:
                         type: number
                         format: float
                     nullable: true
-        models.ElasticNetParams:
-            type: object
-            properties:
-                l1_ratio:
-                    type: number
-                    format: float
-                n_alphas:
-                    type: number
-                    format: int
-                n_features:
-                    type: number
-                    format: int
-                n_samples_test:
-                    type: number
-                    format: int
-                n_samples_train:
-                    type: number
-                    format: int
-        requestRegressionElasticNetRegression:
-            type: object
-            required:
-                - params
-            properties:
-                params:
-                    $ref: '#/components/schemas/models.ElasticNetParams'
-            description: Ручка возвращает формулу и параметры
-        requestRegressionLassoRegression:
-            type: object
-            required:
-                - XData
-                - YData
-                - alpha
-                - tol
-                - normalize
-            properties:
-                XData:
-                    type: array
-                    items:
-                        type: array
-                        items:
-                            type: number
-                            format: float
-                        nullable: true
-                    nullable: true
-                YData:
-                    type: array
-                    items:
-                        type: array
-                        items:
-                            type: number
-                            format: float
-                        nullable: true
-                    nullable: true
-                alpha:
-                    type: number
-                    format: float
-                normalize:
-                    type: boolean
-                tol:
-                    type: number
-                    format: float
-            description: Ручка возвращает формулу и параметры
         requestRegressionMlrRegression:
             type: object
             required:
@@ -257,67 +129,6 @@ components:
                     type: string
                     format: byte
             description: Ручка возвращает формулу и параметры
-        requestRegressionRidgeRegression:
-            type: object
-            required:
-                - XData
-                - YData
-                - alpha
-                - tol
-                - normalize
-            properties:
-                XData:
-                    type: array
-                    items:
-                        type: array
-                        items:
-                            type: number
-                            format: float
-                        nullable: true
-                    nullable: true
-                YData:
-                    type: array
-                    items:
-                        type: array
-                        items:
-                            type: number
-                            format: float
-                        nullable: true
-                    nullable: true
-                alpha:
-                    type: number
-                    format: float
-                normalize:
-                    type: boolean
-                tol:
-                    type: number
-                    format: float
-            description: Ручка возвращает формулу и параметры
-        responseRegressionElasticNetRegression:
-            type: object
-            required:
-                - formula
-            properties:
-                formula:
-                    type: object
-                    additionalProperties:
-                        type: array
-                        items:
-                            type: number
-                            format: float
-                        nullable: true
-            description: Ручка возвращает формулу и параметры
-        responseRegressionLassoRegression:
-            type: object
-            required:
-                - formula
-            properties:
-                formula:
-                    type: object
-                    additionalProperties:
-                        type: object
-                        nullable: true
-            description: Ручка возвращает формулу и параметры
         responseRegressionMlrRegression:
             type: object
             required:
@@ -341,17 +152,6 @@ components:
                         nullable: true
             description: Ручка возвращает формулу и параметры
         responseRegressionMlrRegressionExcel:
-            type: object
-            required:
-                - formula
-            properties:
-                formula:
-                    type: object
-                    additionalProperties:
-                        type: object
-                        nullable: true
-            description: Ручка возвращает формулу и параметры
-        responseRegressionRidgeRegression:
             type: object
             required:
                 - formula
